[package]
name = "pricechart"
version = "0.1.0"
authors = ["Andy Smith <andyrsmith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
float-ord = "0.2.0"

[dependencies.sdl2]
version = "0.34.3"
features = ["gfx", "ttf"]
