[package]
name = "pricechart"
version = "0.1.0"
authors = ["Andy Smith <andyrsmith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
float-ord = "0.2.0"

[dependencies.sdl2]
version = "0.34.3"
features = ["gfx", "ttf"]


[lib]
name = "my_project"
path = "src/lib.rs"

[[bin]]
name = "main1"
path = "src/main1.rs"

[[bin]]
name = "main2"
path = "src/main2.rs"
